--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -26,7 +26,7 @@
   margin-left: 15px;
 }
 .header {
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 960px) {
     margin-top:20%;
   }
 }
